fix:修改与llm的通信方式为rpc
