# controller/auth.go
@@ -50,17 +50,16 @@ func (c *AuthController) Login(ctx *gin.Context) {
 	return
 }
 
-// CallBack 用户在github授权登录之后会被重定向到这里。进行一个请求的发送进行最终验证登录
-// CallBack github重定向
-// @Summary github重定向
-// @Description github重定向,用来初始化这个用户,会返回一个user_id,userid是用在后续的请求上的
+// CallBack 使用code进行最终登录
+// @Summary 使用code进行最终登录
+// @Description 使用code进行最终登录同时异步用来初始化这个用户,会返回一个token
 // @Tags Auth
 // @Param code query string true "github重定向的code"
 // @Produce json
 // @Success 200 {object} response.Success{data=response.CallBack} "初始化成功!"
 // @Failure 400 {object} response.Err "请求参数错误"
 // @Failure 500 {object} response.Err "内部错误"
-// @Router /api/v1/auth/login [get]
+// @Router /api/v1/auth/callBack [get]
 func (c *AuthController) CallBack(ctx *gin.Context) {
 
 	// 绑定查询参数
